[tool.poetry]
name = "oqtepalavash-bot"
version = "0.1.0"
description = ""
authors = ["khasanjon <khasanjon.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.1.1"
environs = "^9.5.0"
isort = "^5.12.0"

[tool.isort]
skip = "__init__.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
