[tool.poetry]
name = "oqtepalavash-bot"
version = "0.1.0"
description = ""
authors = ["khasanjon <khasanjon.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.2.0"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
ujson = "^5.8.0"

[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.2"

[tool.isort]
skip = "__init__.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
